src/main/java/com/example/hunters_league/web/errors/hunt/HuntNotFoundException.java
package com.example.hunters_league.web.errors.hunt;

public class HuntNotFoundException extends RuntimeException {
    public HuntNotFoundException(String huntNotFound) {
        super(huntNotFound);
    }
}
